<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/PersonalProfileOthers"
    tools:context=".PersonalProfileOthers"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="325dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:orientation="vertical">

            <ImageView
                android:layout_marginTop="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/head_photo" />
            <TextView
                android:id="@+id/Username"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Username"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="21dp"
                />

        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="400dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <Button
                        android:id="@+id/AddFriend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Add Friend"
                        android:textSize="20dp"
                        android:backgroundTint="@color/black"/>

                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <Button
                        android:id="@+id/Block"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Block"
                        android:textSize="20dp"
                        android:backgroundTint="@color/black"/>

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="45dp">
        <LinearLayout
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/baseline_email_24"/>
            <TextView
                android:textStyle="bold"
                android:id="@+id/Email"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="Email"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="25dp"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/baseline_numbers_24"/>
            <TextView
                android:textStyle="bold"
                android:id="@+id/Age"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="Age"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="25dp"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/baseline_monitor_weight_24"/>
            <TextView
                android:textStyle="bold"
                android:id="@+id/Weight"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="Username"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="25dp"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/baseline_transgender_24"/>
            <TextView
                android:textStyle="bold"
                android:id="@+id/Gender"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="Gender"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/navigation_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:gravity="bottom"
        >

        <Button
            android:id="@+id/navigation_home"
            android:contentDescription="Home"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#3A3A3A"
            app:icon="@drawable/home" />

        <Button
            android:id="@+id/navigation_friends"
            android:contentDescription="Friends"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/navigation_home"
            android:backgroundTint="#FF3A3A3A"
            app:icon="@drawable/friends" />

        <Button
            android:id="@+id/navigation_schedule"
            android:contentDescription="Schedule"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/navigation_friends"
            android:backgroundTint="#FF3A3A3A"
            app:icon="@drawable/baseline_calendar_month_24" />

        <Button
            android:id="@+id/navigation_gyms"
            android:contentDescription="Gyms"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/navigation_schedule"
            android:backgroundTint="#FF3A3A3A"
            app:icon="@drawable/gym"
            />
        <Button
            android:id="@+id/navigation_profile"
            android:contentDescription="Profile"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/navigation_gyms"
            android:backgroundTint="#FF3A3A3A"
            app:icon="@drawable/user"
            />


    </LinearLayout>


</LinearLayout>